Fixed some video overflow regressions caused by recent media scaling changes.

--- a/client/styles/components/_medium.scss
+++ b/client/styles/components/_medium.scss
@@ -1,4 +1,11 @@
 .mediumContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  max-height: calc(100vh - 128px);
+
   > div {
     display: flex;
     align-items: center;
